RESOLVED FIXED154079
Fix assertions when loading from WebProcess
https://bugs.webkit.org/show_bug.cgi?id=154079
Summary Fix assertions when loading from WebProcess
Alex Christensen
Reported 2016-02-10 11:11:46 PST
Fix assertions when loading from WebProcess
Attachments
Patch (8.28 KB, patch)
2016-02-10 11:21 PST, Alex Christensen
andersca: review+
Alex Christensen
Comment 1 2016-02-10 11:21:34 PST
Alex Christensen
Comment 2 2016-02-10 12:40:55 PST
Comment on attachment 271008 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=271008&action=review > Source/WebKit2/UIProcess/WebPageProxy.cpp:486 > + m_process->processPool().sendToAllProcesses(Messages::WebProcess::EnsurePrivateBrowsingSession(m_sessionID)); My one concern with this approach is that it will use more memory in each WebProcess for the private browsing sessions they probably won't use, but I can't think of another good solution other than ensuring the private browsing session for each load in a private browsing session.
Alex Christensen
Comment 3 2016-02-10 12:56:21 PST
Note You need to log in before you can comment on or make changes to this bug.